--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomKey!!!
 
-# same as wp-config
+# same as /wp-config.php
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
