--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,10 @@ language: php
 php:
   - '5.6'
   - '7.0'
+
+before_script:
+  - composer self-update
+  - composer install --no-interaction
+
+script:
+  - vendor/bin/phpunit
